--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,44 @@
-
----
-
-### **Paso 5: Crear el `docker-compose.yml`**
-
-Este archivo orquesta nuestros servicios (`app` y `db`). Define cómo se comunican, las variables de entorno, los volúmenes para persistencia, etc.
-
-Edita el archivo `docker-compose.yml`:
-
-```yaml
 version: '3.8'
 
 services:
   # Servicio de nuestra aplicación
-  app:
-    build: .  # Construye la imagen usando el Dockerfile en el directorio actual
-    container_name: bootcamp-app
+  frontend:
+    build: ./frontend # Construye desde la carpeta frontend
+    container_name: bootcamp-frontend
     ports:
-      - "5000:5000" # Mapea el puerto 5000 del host al 5000 del contenedor
+      - "80:80" # Expone el puerto 80 del Nginx al 80 de tu máquina
+    depends_on:
+      - app
+  app:
+    build: .
+    container_name: bootcamp-app
+    # ports: <- COMENTA O ELIMINA ESTA LÍNEA, AHORA SE ACCEDE A TRAVÉS DE NGINX
+    #  - "5000:5000"
     environment:
-      # Variables de entorno para la conexión a la BD
-      # Docker Compose las pasa al contenedor de la app
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - DB_HOST=db # El nombre del host de la BD es el nombre del servicio 'db'
+      - DB_HOST=db
     depends_on:
-      - db # Le dice a Docker que inicie el servicio 'db' antes que 'app'
+      - db
 
   # Servicio de la base de datos
   db:
-    image: postgres:14-alpine # Usamos una imagen ligera de Postgres
+    # Usamos una imagen ligera de Postgres (basada en Alpine Linux)
+    image: postgres:14-alpine
     container_name: bootcamp-db
+    # Estas variables son usadas por la imagen de Postgres para inicializar la BD
     environment:
-      # Estas variables son usadas por la imagen de Postgres para inicializar la BD
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    # Monta un volumen para que los datos de la base de datos persistan
     volumes:
-      - postgres_data:/var/lib/postgresql/data # Monta un volumen para persistencia
+      - postgres_data:/var/lib/postgresql/data
+    # Opcional: para conectar a la BD desde tu máquina local con una herramienta como DBeaver
     ports:
-      - "5432:5432" # Opcional: para conectar a la BD desde tu máquina local
+      - "5432:5432"
 
-# Docker gestionará la creación de este volumen
+# Docker gestionará la creación y el ciclo de vida de este volumen
 volumes:
   postgres_data:
