--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3.8'
+# La directiva 'version' es opcional en las versiones modernas de Docker Compose
+# version: '3.8'
 
 services:
-  # Servicio de nuestra aplicación
+  # --- SERVICIOS DE LA APLICACIÓN ---
   frontend:
-    build: ./frontend # Construye desde la carpeta frontend
+    build: ./frontend
     container_name: bootcamp-frontend
     ports:
-      - "80:80" # Expone el puerto 80 del Nginx al 80 de tu máquina
+      - "80:80"
     depends_on:
       - app
+
   app:
     build: .
     container_name: bootcamp-app
-    # ports: <- COMENTA O ELIMINA ESTA LÍNEA, AHORA SE ACCEDE A TRAVÉS DE NGINX
-    #  - "5000:5000"
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
@@ -22,23 +22,43 @@ services:
     depends_on:
       - db
 
-  # Servicio de la base de datos
   db:
-    # Usamos una imagen ligera de Postgres (basada en Alpine Linux)
     image: postgres:14-alpine
     container_name: bootcamp-db
-    # Estas variables son usadas por la imagen de Postgres para inicializar la BD
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    # Monta un volumen para que los datos de la base de datos persistan
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    # Opcional: para conectar a la BD desde tu máquina local con una herramienta como DBeaver
-    ports:
+    ports: # Opcional: para conectar a la BD directamente desde tu máquina
       - "5432:5432"
 
-# Docker gestionará la creación y el ciclo de vida de este volumen
+  # --- SERVICIOS DE MONITOREO ---
+  prometheus:
+    image: prom/prometheus:v2.45.0
+    container_name: bootcamp-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    depends_on:
+      - app
+
+  grafana:
+    image: grafana/grafana:9.5.1
+    container_name: bootcamp-grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
+# --- DECLARACIÓN DE VOLÚMENES PERSISTENTES ---
+# Esta sección debe estar al final y sin indentación
 volumes:
   postgres_data:
+  grafana_data:
